Archive2/6c/2bc148882f0ce4/output
In file included from /usr/local/include/c++/4.9.2/algorithm:62:0,
                 from main.cpp:4:
/usr/local/include/c++/4.9.2/bits/stl_algo.h: In instantiation of '_OIter std::copy_if(_IIter, _IIter, _OIter, _Predicate) [with _IIter = __gnu_cxx::__normal_iterator<int*, std::vector<int> >; _OIter = std::back_insert_iterator<std::vector<int> >; _Predicate = getPrimes(int)::<lambda(int)>]':
main.cpp:30:6:   required from here
/usr/local/include/c++/4.9.2/bits/stl_algo.h:746:21: error: could not convert '__pred.getPrimes(int)::<lambda(int)>(__first.__gnu_cxx::__normal_iterator<_Iterator, _Container>::operator*<int*, std::vector<int> >())' from 'void' to 'bool'
  if (__pred(*__first))
                     ^
